# Glens

./: .gitignore  README.md  main.py  pyproject.toml
src/glens/: __init__.py
src/glens/cli/: main.py
src/glens/data/: __init__.py  gpcrdb.py  sequences.py  uniprot.py
src/glens/design/: __init__.py  candidates.py  cli.py  mutations.py  results.py  selectivity.py  sequences.py
src/glens/embeddings/: __init__.py  artifact.py  cli.py  model.py  views.py
src/glens/inference/: __init__.py  ensembles.py  prediction_io.py
src/glens/models/: batch_embed.py  embed_model.py  embed_views.py  family_blockwise_fit.py  family_fit.py  regions.py
tests/: test_design_candidates.py  test_design_mutations.py  test_design_results.py  test_design_selectivity.py  test_model_ensembles.py  test_sequence_data.py
