[project]
name = "glens"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Zane Davidson", email = "zanerdavidson@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "typer>=0.25.1",
]

[project.scripts]
glens = "glens.cli.main:app"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
]

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true