[project]
name = "glens"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Zane Davidson", email = "zanerdavidson@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fair-esm>=2.0.0",
    "numpy>=2.4.5",
    "requests>=2.34.2",
    "scikit-learn>=1.8.0",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
    "transformers>=5.8.1",
    "typer>=0.25.1",
]

[project.scripts]
glens = "glens.cli.main:app"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
]

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true
